fix(layout): enhance DashboardLayout for better overflow handling and improve LoginForm with default email and password values

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 
-@theme  {
-  /* --color-background: var(--background); */
-
+* {
+  scroll-behavior: smooth;
+  scrollbar-color: #17536e #f0f0f0;
 }
-
